spacing fixes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -354,14 +354,10 @@
         margin-right: 16px;
     }
     
-
     .hbr-path-animation {
-        bottom: 41%;
-    }
-
-    .hbr-path-animation {
-        left: -114%;
-        width: 263%;
+        left: -183%;
+        bottom: 20%;
+        width: 400%;
     }
 
 
